- Add `--debug-zoom-levels` command line argument to `build` command of `main` function.
- Add `WithMask` sprite class to add mask layer to images.
- Add `SpriteWrapper` class to simplify writing sprite modifiers.
- Support using StringRef in Action 0x14 (`SetProperties`).
- Support using StringRef as `NewGRF` `name` and `description`.
- Support encoding of bridge layouts.
- Support encoding of industry layouts.
- Support encoding of tile acceptance lists for houses and industry tiles.
- Support expressions for register value in PERM and TEMP access.
- Support parameter expressions for vars60+ in `Switch` code (via var7b).
- Support cropping 24bpp sprites.
- Add `preferred_blitter` argument to `NewGRF` constructor, possible values `NewGRF.BLITTER_BPP_8` and `NewGRF.BLITTER_BPP_32`.
- Add `StringManager.get_persistent_id` function to register strings in "persistent" range (0xDCxx).
- Add `Sprite.save_gif` method to generate palette animated images.
- Add `Sprite.make_rgba_image` method to generate static PIL `Image`.
- Add init_id_map command line command to initialize id_map.json.
- Add `Date` type to represent dates that don't fit into `datetime.date`.
- Add example of a simple eyecandy station.
- Start auto-assiged IDs from 0 for INDUSTRY_TILE feature.
- Rename `AlternativeSprites.get_zoom` to `get_sprite` and add bpp argument.
- Rename some of the Action0 properties for `CARGO` to match nml.
- Don't write redundant actions for railtypes without fallbacks in railtype table.
- Return cargo type ids in `NewGRF.set_cargo_table`.
- Remove all uses of spectra in favour of own colour submodule using OKLAB colour space.
- Only replace .grf file when build succeeded.

- lib: Fix `CallbackManager.make_switches` for non-vehicle features.
- lib: Fix incorrect 2cc colors for auto-articulated parts.
- lib: Fix unicode vehicle names.
- lib: Don't change callbacks passed to `CallbackMananger`.
- lib: Set correct flags and track_type on auto-articulated parts.